fix popup alignment

--- a/src/ui/components/popup/popup-common.css
+++ b/src/ui/components/popup/popup-common.css
@@ -23,7 +23,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     line-height: 1.8rem;
     font-size: 18px;
     color: black;
